fix(css): #2568 centre align results (#2575)
I bypass reviewers since no one is available at this point in time.

--- a/src/components/CohortBuilder/Results.css
+++ b/src/components/CohortBuilder/Results.css
@@ -1,5 +1,6 @@
 .cb-summary {
   display: flex;
+  align-items: center;
   flex-wrap: wrap;
   flex: 2;
 }
@@ -85,7 +86,7 @@
   width: 100vw;
   height: 100%;
   left: 0;
-  top: 0px;
+  top: 0;
   display: flex;
   justify-content: center;
 }
